k8s/db-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: db
spec:
  ports:
  - name: "postgres"
    port: 5432
    targetPort: 5432
  selector:
    service: db
status:
  loadBalancer: {}
