k8s/lb-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: lb
spec:
  ports:
  - name: "http"
    port: 80
    targetPort: 80
  - name: "https"
    port: 443
    targetPort: 443
  selector:
    service: lb
status:
  loadBalancer: {}
